# Smart-City-Environmental-Monitoring-Alert-System

./: .gitignore  README.md  cred2.json  credentials.json  docker-compose.yml  flake.nix  openapi.yaml  redoc-static.html
demo/: .gitignore  CLAUDE.md  Dockerfile  README.adoc  build.gradle  build.gradle.kts
demo/certs/: ca.cnf  ca.crt  ca.key  ca.pem  ca.srl  mqtt.cnf  mqtt.crt  mqtt.csr  mqtt.key  mqtt.pem  v3.ext
demo/src/main/java/sfwreng3a04/t03/g01/demo/: AlertController.java  AlertManagement.java  AlertServiceAPI.java  AuditLogController.java  AuthenticationController.java  AuthenticationManagement.java  DashboardController.java  DataServiceAPI.java  DemoApplication.java  IngressVerticle.java  MainVerticle.java  RegionController.java  SensorController.java  SensorDataController.java  SensorDataManagement.java
demo/src/main/java/sfwreng3a04/t03/g01/demo/alert/: Alert.java  AlertRule.java  AlertStatus.java  ThresholdCondition.java
demo/src/test/java/sfwreng3a04/t03/g01/demo/: DemoApplicationTests.java  TestMainVerticle.java
frontend/: Dockerfile  nginx.conf  package-lock.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: Navbar.css  Navbar.jsx  ScemasLogo.jsx
frontend/src/pages/: Alert.jsx  Audit.jsx  Authenticate.jsx  Dashboard.css  Dashboard.jsx  Landing.css  Landing.jsx  Region.jsx  Sensor.jsx  SensorData.jsx  Sensordata.jsx
sensor-sim/: Cargo.toml  a.json  cred2.json  credentials.json
sensor-sim/certs/: cert.crt  output.json
sensor-sim/src/: main.rs
signage/: Cargo.toml
signage/src/: main.rs
(+18 files in other folders)
