[package]
name = "sensor-sim"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.61", features = ["derive"] }
rand = "0.10.0"
rand_distr = "0.6.0"
rumqttc = "0.25.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
time = { version = "0.3.47", features = ["formatting", "serde", "serde-well-known"] }
tokio = { version = "1.50.0", features = ["full"] }
